--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input type="text" id="player2" placeholder="Nome do jogador 2">
     <button id="start">Começar!</button>
     <h2>Vez de: <span id="turnPlayer"></span></h2>
-    <section>
+    <section id="gameBoard">
         <span data-region="0.0"></span>
         <span data-region="0.1"></span>
         <span data-region="0.2"></span>
